# agora_sec_edgar

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: .json  api.rs  base.rs  constants.rs  edgar.rs  error.rs  lib.rs
src/builder/: builder.rs  filing.rs  filling.rs  mod.rs  owner.rs
src/filing_type_builder/: filing.rs  filing_type_builder.rs  mod.rs  owner.rs
