[package]
name = "agora_sec_edgar"
authors = ["Samuel Grant Adams"]
description = "A library for fetching and processing SEC EDGAR data"
license = "MIT"
repository = "https://github.com/AdamsIncorporated/agora_sec_edgar.git"
readme = "README.md"
keywords = ["SEC", "EDGAR", "finance", "Rust"]
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
