[package]
name = "agora_sec_edgar"
authors = ["Samuel Grant Adams"]
description = "A library for fetching and processing SEC EDGAR data"
license = "MIT"
repository = "https://github.com/AdamsIncorporated/agora_sec_edgar.git"
readme = "README.md"
keywords = ["SEC", "EDGAR", "finance", "Rust"]
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
log = "0.4.27"
phf = { version = "0.12.1", features = ["macros"] }
reqwest = "0.12.22"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.8.1"
serde_json = "1.0"
thiserror = "2.0.12"
tokio = { version = "1.41", features = ["full"] }
url = "2.5.4"
